# OptimalEngine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  Makefile  PLAN.md  README.md  mix.exs
.github/workflows/: ci.yml
.wiki/: SCHEMA.md
apps/docs/: README.md  package.json  svelte.config.js  vite.config.ts
apps/mcp/: package-lock.json  package.json  tsconfig.json
config/: config.exs  dev.exs  prod.exs  test.exs
deploy/: .dockerignore  Caddyfile.prod  Dockerfile.desktop  Dockerfile.docs  Dockerfile.engine  Dockerfile.site  README.md  docker-compose.prod.yml  docker-compose.yml  env.example  grafana-dashboard.json
desktop/: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
desktop/src/: app.css  app.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
docs/: README.md
docs/architecture/: 00-overview.md  01-network.md  02-signal.md  03-composition.md  04-interface.md  05-data.md  06-feedback.md  07-governance.md  ADR-002-optimal-context-engine-architecture.md  ARCHITECTURE.md  DATA_ARCHITECTURE.md  ENTERPRISE.md  FULL-SYSTEM-ARCHITECTURE.md  UI.md  WIKI-LAYER.md  WORKSPACE.md  arscontexta-extraction.md  context-system.md  jordan-jarvis-system.md  layer-bridge.md  optimal-engine-package-spec.md  system-overview.md  workspace-protocol.md
docs/concepts/: failure-modes.md  infinite-context-framework.md  kernel.yaml  methodology.md  signal-theory.md  three-spaces.md
docs/guides/: getting-started.md  mix-tasks.md  writing-guide.md
docs/reference/: components.md  data-model.md  hooks.md  node-template.md  operations-spec.md  search-architecture.md  session-lifecycle.md  vocabulary.md
docs/research/: signal-composition-layer.md
extensions/browser/: README.md  manifest.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
extensions/raycast/: CHANGELOG.md  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
lib/: optimal_engine.ex
lib/optimal_engine/: application.ex  architecture.ex  backup.ex  batch.ex  classifier.ex  cli.ex  compliance.ex  composer.ex  connectors.ex  context.ex  context_assembler.ex  cortex_feed.ex  graph.ex  graph_analyzer.ex  health.ex  mcts.ex  (+33 more)
sample-workspace/: README.md
sdks/python/: .gitignore  README.md  pyproject.toml
sdks/python/src/optimal_engine/: __init__.py  _async_client.py  _client.py  _transport.py  exceptions.py  memory.py  profile.py  retrieval.py  surface.py  types.py  workspace.py
sdks/python/src/optimal_engine/adapters/: __init__.py  langchain.py  openai_agents.py
sdks/python/tests/: test_client.py
site/: package-lock.json  package.json  svelte.config.js  vite.config.ts
test/: batch_test.exs  intake_test.exs  optimal_engine_test.exs  profile_test.exs  test_helper.exs
(+541 files in other folders)
