[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "optimal-engine"
version = "0.1.0"
description = "Python client for the Optimal Engine — open-source memory infrastructure"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Optimal Engine Maintainers" },
]
keywords = [
    "optimal-engine",
    "memory",
    "rag",
    "llm",
    "second-brain",
    "knowledge-graph",
    "ai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "typing-extensions>=4.10.0",
]

[project.optional-dependencies]
openai = ["openai>=1.30.0"]
langchain = ["langchain-core>=0.2.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/optimalengine/optimal-engine"
Repository = "https://github.com/optimalengine/optimal-engine"
Issues = "https://github.com/optimalengine/optimal-engine/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/optimal_engine"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/pyproject.toml",
]

[tool.mypy]
strict = true
python_version = "3.10"
files = ["src/optimal_engine"]
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["langchain_core.*", "openai.*", "agents", "agents.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["optimal_engine.adapters.openai_agents", "optimal_engine.adapters.langchain"]
disallow_untyped_decorators = false
warn_unused_ignores = false

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
